kubernetes/medusa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medusa-backend
  namespace: babybites-medusajs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medusa-backend
  template:
    metadata:
      labels:
        app: medusa-backend
    spec:
      containers:
      - name: medusa
        image: medusajs/medusa-starter-default:latest
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: medusa-backend
  namespace: babybites-medusajs
spec:
  selector:
    app: medusa-backend
  ports:
  - port: 9000
